Refactor how bestGraph information is handle